==> TNorbury/AVR_Stopwatch/serial.c <==
//------------------------------------------------------------------------------
//             __             __   ___  __
//     | |\ | /  ` |    |  | |  \ |__  /__`
//     | | \| \__, |___ \__/ |__/ |___ .__/
//
//------------------------------------------------------------------------------

#include "serial.h"
#include <stdbool.h>
#include <avr/interrupt.h>

//------------------------------------------------------------------------------
//      __   ___  ___         ___  __
//     |  \ |__  |__  | |\ | |__  /__`
//     |__/ |___ |    | | \| |___ .__/
//
//------------------------------------------------------------------------------

//------------------------------------------------------------------------------
//     ___      __   ___  __   ___  ___  __
//      |  \ / |__) |__  |  \ |__  |__  /__`
//      |   |  |    |___ |__/ |___ |    .__/
//
//------------------------------------------------------------------------------

//------------------------------------------------------------------------------
//                __          __        ___  __
//     \  /  /\  |__) |  /\  |__) |    |__  /__`
//      \/  /~~\ |  \ | /~~\ |__) |___ |___ .__/
//
//------------------------------------------------------------------------------

static volatile uint8_t busy;
static volatile uint8_t index;
static volatile char read;
static char my_string[MAX_SIZE];

//------------------------------------------------------------------------------
//      __   __   __  ___  __  ___      __   ___  __
//     |__) |__) /  \  |  /  \  |  \ / |__) |__  /__`
//     |    |  \ \__/  |  \__/  |   |  |    |___ .__/
//
//------------------------------------------------------------------------------

//------------------------------------------------------------------------------
//      __        __          __
//     |__) |  | |__) |    | /  `
//     |    \__/ |__) |___ | \__,
//
//------------------------------------------------------------------------------

//==============================================================================
void serial_init()
{
  // USART0 initialization
  // Communication Parameters: 8 Data, 1 Stop, No Parity
  // USART0 Receiver: On
  // USART0 Transmitter: On
  // USART0 Mode: Asynchronous
  // USART0 Baud Rate: 9600
  UCSR0A=(0<<RXC0) | (0<<TXC0) | (0<<UDRE0) | (0<<FE0) | (0<<DOR0) | (0<<UPE0)
  | (0<<U2X0) | (0<<MPCM0);
  UCSR0B=(1<<RXCIE0) | (1<<TXCIE0) | (0<<UDRIE0) | (1<<RXEN0) | (1<<TXEN0)
  | (0<<UCSZ02) | (0<<RXB80) | (0<<TXB80);
  UCSR0C=(0<<UMSEL01) | (0<<UMSEL00) | (0<<UPM01) | (0<<UPM00) | (0<<USBS0)
  | (1<<UCSZ01) | (1<<UCSZ00) | (0<<UCPOL0);
  UBRR0H=0x00;
  UBRR0L=0x00;
}

//=============================================================================
void serial_write(uint8_t data)
{
  // Wait for empty transmit buffer
  while ( !( UCSR0A & (1<<UDRE0)) )
  {
    ;
  }
  // Put data into buffer, sends the data
  UDR0 = data;
}

//=============================================================================
uint8_t serial_write_string(char *in_string)
{
  uint8_t return_val;
  uint8_t i = 0;

  if (!busy)
  {
    while(my_string[i] = in_string[i++]);

    return_val = 0;
    if (in_string[0])
    {
      serial_write(in_string[0]);
      index = 1;
    }
  }
  else
  {
    return_val = 1;
  }

  return return_val;
}

//=============================================================================
uint8_t serial_read()
{
  char retval = read;
  read = 0;
  return retval;
}

//------------------------------------------------------------------------------
//      __   __              ___  ___
//     |__) |__) | \  /  /\   |  |__
//     |    |  \ |  \/  /~~\  |  |___
//
//------------------------------------------------------------------------------

//------------------------------------------------------------------------------
//      __                  __        __        __
//     /  `  /\  |    |    |__)  /\  /  ` |__/ /__`
//     \__, /~~\ |___ |___ |__) /~~\ \__, |  \ .__/
//
//------------------------------------------------------------------------------

//------------------------------------------------------------------------------
//        __   __  , __
//     | /__` |__)  /__`
//     | .__/ |  \  .__/
//
//------------------------------------------------------------------------------
ISR(USART_TX_vect)
{
  if (my_string[index] == 0)
  {
    busy = 0;
  }
  else
  {
    serial_write(my_string[index]);
    index ++;
  }
}


//=============================================================================
ISR(USART_RX_vect)
{
  read = UDR0;
}
